# metadata

./: Cargo.toml
src/: json.rs  lib.rs  toml.rs  yaml.rs
tests/: split-output.md
tests/json/: input.md
tests/toml/: input.md
tests/yaml/: input.md
