[package]
name = "diecast-metadata"
version = "0.1.0"
authors = ["Jorge Israel Peña <jorge.israel.p@gmail.com>"]

[dependencies]
typemap = "*"
regex = "*"

[dependencies.toml]
version = "*"
optional = true

[dependencies.yaml-rust]
version = "*"
optional = true

[dependencies.serde]
version = "*"
optional = true

[dependencies.diecast]
path = "../diecast"

[features]
yaml = ["yaml-rust"]
json = ["serde"]
